# porkpy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  porkpy.py  pyproject.toml  test_porkpy.py  tests.py
tests/: test_porkpy.py
